Added basic support for event communication. Added Dockerfile